[package]
name = "lpm"
version = "0.1.0"
edition = "2021"
authors = ["Gamedroit <Hadaward>", "Duck"]
description = "A Lua Package Manager written in rust"
license = "MIT"
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
inquire = "0.7.5"
reqwest = "0.12.4"
scraper = "0.19.0"
simple-home-dir = "0.3.3"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }